--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('your-background-image.jpg'); /* Replace 'your-background-image.jpg' with your image file */
+            background-image: url('background.png'); /* Replace 'your-background-image.jpg' with your image file */
             background-size: 90% auto; /* Cover only 90% of the section width */
             background-position: center;
             background-repeat: no-repeat;
@@ -36,7 +36,7 @@
     <section id="home" class="section home-section">
         <div class="background-image"></div> <!-- Background image div -->
         <div class="container">
-            <img src="logo.png" alt="Restaurant Logo" class="logo">
+            <img src="logo.png.jpeg" alt="Restaurant Logo" class="logo">
             <p class="description">Welcome to Spice Munchies, where flavors come alive! Enjoy our delicious meals and refreshing beverages, crafted to perfection for your taste buds.</p>
             <div class="buttons">
                 <a href="#menu" class="btn">Menu</a>
@@ -84,23 +84,23 @@
             <h2 class="section-title">Combo Offers</h2>
             <div class="combo-grid">
                 <div class="combo-item">
-                    <img src="combo1.png" alt="Combo 1">
-                    <p>Cheese Loaded Pizza + Peri Peri Fries + Virgin Mojito<span class="combo-price">₹250</span></p>
+                    <img src="buger fries mojito.jpg" alt="Combo 1">
+                    <p>Cheese Loaded Pizza + Peri Peri Fries + Virgin Mojito<span class="combo-price">:-₹250</span></p>
                 </div>
                 <div class="combo-item">
-                    <img src="combo2.png" alt="Combo 2">
-                    <p>2 Aloo Tikki Burgers + 2 Virgin Mojitos<span class="combo-price">₹150</span></p>
+                    <img src="burger-mojito-combo-.jpg" alt="Combo 2">
+                    <p>2 Aloo Tikki Burgers + 2 Virgin Mojitos<span class="combo-price">:-₹150</span></p>
                 </div>
                 <div class="combo-item">
-                    <img src="combo3.png" alt="Combo 3">
-                    <p>Peri Peri Fries + Garlic Bread<span class="combo-price">₹180</span></p>
+                    <img src="garlic fries combo.png" alt="Combo 3">
+                    <p>Peri Peri Fries + Garlic Bread<span class="combo-price">:-₹180</span></p>
                 </div>
                 <div class="combo-item">
-                    <img src="shake-combo.png" alt="Shake Combo">
+                    <img src="milkshakes.jpg" alt="Shake Combo">
                     <p>Get 1 chocolate milkshake free on purchase of 4<span class="combo-price">Special Offer</span></p>
                 </div>
                 <div class="combo-item">
-                    <img src="discount-offer.png" alt="Discount Offer">
+                    <img src="background.png" alt="Discount Offer">
                     <p>Extra 10% discount on order above ₹300<span class="combo-price">Terms and conditions apply</span></p>
                 </div>
             </div>
